test-aws/aws_configs/ap-southeast-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-f1ef9894",
     "RouteTableId": "rtb-f3395496"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-f3395496",
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-be4ce8db",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-b50c85d0"
  }
 ]
}
